Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47327

qtwayland don't support xdg shell for weston1.8.0

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.7.1, 5.8.0
    • 5.4.1, 5.4.2
    • QPA: Wayland
    • None
    • linux embeded system, qt5.4.1

    Description

      I use weston1.8.0 now, but the xdg shell in qtwayland is not match it. Could you please update it. Thank you.

      This bug is similar with QTBUG-38633.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sletta Gunnar Sletta
            zoulan zoulan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes