xdg-shell: upgrade to support current version (weston-1.8.0)

Handle transition from Normal to Maximize then Fullscreen and back to Maximized.
Avoid to maximize if no requested size

The protocol file is a raw copy of
Source: http://cgit.freedesktop.org/wayland/weston/plain/protocol/xdg-shell.xml?id=1.8.0

Minor Nitpick fixes (arrays of bytes, conditionnal or test, c++ function call)

Task-number: QTBUG-47327
Change-Id: Ib508e2166cc1337fd93454f30814136839cffa29
Reviewed-by: Giulio Camuffo <giulio.camuffo@jollamobile.com>